DontExpiReBack/src/main/java/org/example/error/EmptyUsernameSlotException.java
package org.example.error;

public class EmptyUsernameSlotException extends RuntimeException {
    public EmptyUsernameSlotException(String message) {
        super(message);
    }
}
